testdata/de/dm/intellij/liferay/language/groovy/LiferayGroovyDeprecationInspectionTest/script.groovy
<warning descr="The classes from package com.liferay.util.bridges.mvc in util-bridges.jar were moved to a new package com.liferay.portal.kernel.portlet.bridges.mvc in portal-service.jar. (see LPS-50156)"><warning descr="Unused import">import <error descr="Cannot resolve symbol 'com'">com</error>.<error descr="Cannot resolve symbol 'liferay'">liferay</error>.<error descr="Cannot resolve symbol 'util'">util</error>.<error descr="Cannot resolve symbol 'bridges'">bridges</error>.<error descr="Cannot resolve symbol 'mvc'">mvc</error>.<error descr="Cannot resolve symbol 'ActionCommand'">ActionCommand</error></warning></warning>
